from enum import Enum

class State(Enum):
    CONNECTING = "CONNECTING"
    SETUP = "SETUP"
    TRAINING = "TRAINING"
    SECURE_AVERAGE_COMPUTATION = "SECURE_AVERAGE_COMPUTATION"
    SAVING_MODEL = "SAVING_MODEL"
    TERMINATION_CHECK = "TERMINATION_CHECK"
    SHUTDOWN = "SHUTDOWN"

